--- a/SpanishWords/SpanishWords.csproj
+++ b/SpanishWords/SpanishWords.csproj
@@ -1,20 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.20" />
-		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.20" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.20" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.20" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.20">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.20">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
+		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\EntityFrameworkDataAccess\EntityFrameworkDataAccess.csproj" />
 	</ItemGroup>
 </Project>
