--- a/SpanishWords/SpanishWords.Web.csproj
+++ b/SpanishWords/SpanishWords.Web.csproj
@@ -14,6 +14,6 @@
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\EntityFrameworkDataAccess\EntityFrameworkDataAccess.csproj" />
+	  <ProjectReference Include="..\EntityFrameworkDataAccess\SpanishWords.EntityFramework.csproj" />
 	</ItemGroup>
 </Project>
