--- a/EntityFrameworkDataAccess/SpanishWords.EntityFramework.csproj
+++ b/EntityFrameworkDataAccess/SpanishWords.EntityFramework.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,6 +10,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.20" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.20" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.20" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.20" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.20" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.20">
 			<PrivateAssets>all</PrivateAssets>
@@ -20,6 +21,10 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\SpanishWords.Models\SpanishWords.Models.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 
 </Project>
