Corrected folder names, namespaces names and project configuration names

--- a/SpanishWords.Web/SpanishWords.Web.csproj
+++ b/SpanishWords.Web/SpanishWords.Web.csproj
@@ -14,6 +14,6 @@
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\EntityFrameworkDataAccess\SpanishWords.EntityFramework.csproj" />
+	  <ProjectReference Include="..\SpanishWords.EntityFramework\SpanishWords.EntityFramework.csproj" />
 	</ItemGroup>
 </Project>
