Tried to add Identity, but it doesn't work.

--- a/SpanishWords.Web/appsettings.json
+++ b/SpanishWords.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=COMPUTER\\MSSQLSERVER01;Database=EfSpanishWords;Trusted_Connection=True;"
+    "Default": "Server=COMPUTER\\MSSQLSERVER01;Database=EfSpanishWords;Trusted_Connection=True;",
+    "WordsContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SpanishWords.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
