--- a/SpanishWords.Web/appsettings.json
+++ b/SpanishWords.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=COMPUTER\\MSSQLSERVER01;Database=EfSpanishWords;Trusted_Connection=True;"
+    "Default": "Data Source=COMPUTER\\MSSQLSERVER01;Integrated Security=True;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
