--- a/SpanishWords.Web/appsettings.json
+++ b/SpanishWords.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=COMPUTER\\MSSQLSERVER01;Database=SpanishWords;Integrated Security=True;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Default": "Data Source=COMPUTER\\MSSQLSERVER01;Database=SpanishWords;Integrated Security=True;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "WordsContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SpanishWords.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
