--- a/SpanishWords.Web/SpanishWords.Web.csproj
+++ b/SpanishWords.Web/SpanishWords.Web.csproj
@@ -23,6 +23,9 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+
+		<PackageReference Include="NLog.Web.AspNetCore" Version="5.*" />
+		<PackageReference Include="NLog" Version="5.*" />
 	</ItemGroup>
 
 
