--- a/SpanishWords.Models/SpanishWords.Models.csproj
+++ b/SpanishWords.Models/SpanishWords.Models.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.14" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.14" />
+	  
   </ItemGroup>
 
 </Project>
