Implemented Config File
Extracted Correct Number For Learning A Word to Config File (appsettings.json)

My config file:

{
  "Logging": {
    "LogLevel": {
      "Default": "Information",
      "Microsoft.AspNetCore": "Warning"
    }
  },
  "AllowedHosts": "*",
  "ConnectionStrings": {
    "Default": "Data Source=COMPUTER\\MSSQLSERVER01;Database=SpanishWords;Integrated Security=True;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
    "WordsContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SpanishWords.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
  },
  "NumberForCorrectsAnswersToLearn":  3
}

--- a/SpanishWords.Web/appsettings.json
+++ b/SpanishWords.Web/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "Default": "Data Source=COMPUTER\\MSSQLSERVER01;Database=SpanishWords;Integrated Security=True;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "WordsContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SpanishWords.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "NumberForCorrectsAnswersToLearn":  3
 }
