--- a/SpanishWords.Web/nlog.config
+++ b/SpanishWords.Web/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="c:\temp\internal-nlog-SpanishWords.txt">
+      internalLogFile="${aspnet-appbasepath}\logs\internal-nlog-SpanishWords.txt">
 
 	<!-- enable asp.net core layout renderers -->
 	<extensions>
@@ -13,11 +13,11 @@
 	<!-- the targets to write to -->
 	<targets>
 		<!-- File Target for all log messages with basic details -->
-		<target xsi:type="File" name="allfile" fileName="c:\temp\nlog-SpanishWords-all-${shortdate}.log"
+		<target xsi:type="File" name="allfile" fileName="${aspnet-appbasepath}\logs\nlog-SpanishWords-all-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
 
 		<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-		<target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-SpanishWords-own-${shortdate}.log"
+		<target xsi:type="File" name="ownFile-web" fileName="${aspnet-appbasepath}\logs\nlog-SpanishWords-own-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
 		<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
