--- a/SpanishWords.Web/appsettings.json
+++ b/SpanishWords.Web/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "{CONNECTION_STRING : placeholder}",
-    "WordsContextConnection": "{CONNECTION_STRING : placeholder}"
+    "Default": "Data Source=COMPUTER\\MSSQLSERVER01;Database=SpanishWords;Integrated Security=True;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "WordsContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SpanishWords.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "NumberForCorrectsAnswersToLearn":  3
+  "NumberForCorrectsAnswersToLearn": 3
 }
